--- a/html_default/test.html
+++ b/html_default/test.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Hello!</h1>
     <p>Hi from Rust</p>
+    <button type="button" onclick="test()">Test js</button>
   </body>
 </html>
